# file_organizer

./: .gitignore  LICENSE  build.py  main.py  pyproject.toml  requirements
file_organizer/: __init__.py
tests/: test_fs.py
