[build-system]
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer"
version = "0.1.0"
authors = [
    { name = "袁首京", email = "yuanshoujing@gmail.com" },
]
description = "文件整理器"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["loguru", "click", "tqdm"]

[project.optional-dependencies]
test = ["pytest"]
build = ["setuptools", "build", "twine"]
pack = ["pyinstaller"]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.11"
venvPath = '.'
venv = '.venv'
